--- a/Dataset_split.ipynb
+++ b/Dataset_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,18 @@
     "# Writing to Train, Dev, Test files\n",
     "write_to_file('data/NER_TRAIN/NER_TRAIN_ALL.json', train_data)\n",
     "write_to_file('data/NER_DEV/NER_DEV_ALL.json', dev_data)\n",
-    "write_to_file('data/NER_TEST/NER_TEST_ALL.json', test_data)"
+    "write_to_file('data/NER_TEST/NER_TEST_ALL.json', test_data)\n",
+    "\n",
+    "\n",
+    "# Splitting the data into Train, Dev, Test sets (80-10-10 split)\n",
+    "train_data_reduced, _ = train_test_split(train_data, test_size=0.4, random_state=42)\n",
+    "dev_data_reduced, _= train_test_split(dev_data, test_size=0.4, random_state=42)\n",
+    "test_data_reduced, _ = train_test_split(test_data, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Writing to Train, Dev, Test files\n",
+    "write_to_file('data/NER_TRAIN/NER_TRAIN_REDUCED.json', train_data)\n",
+    "write_to_file('data/NER_DEV/NER_DEV_REDUCED.json', dev_data)\n",
+    "write_to_file('data/NER_TEST/NER_TEST_REDUCED.json', test_data)"
    ]
   }
  ],
